<resources>
    <string name="app_name">TwitterClone</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_search">Search</string>
    <string name="hint_tweet_text">What\'s up</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Signout</string>

    <string name="text_signup">No account? Go to Signup</string>
    <string name="text_login">Already have an account? Go to Login</string>
    <string name="log_out">Logout</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>