<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignupActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/title"
                android:layout_margin="@dimen/grid_2x"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/system_height"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_username">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/system_height"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/system_height"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSignup"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/passwordTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:onClick="onSignup"
                android:text="@string/button_signup" />
            <TextView
                android:id="@+id/loginTV"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/system_height"
                android:layout_below="@id/buttonSignup"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:clickable="true"
                android:onClick="goToLogin"
                style="@style/LinkText"
                android:textSize="16sp"
                android:text="@string/text_login" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/signupProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/trnasparent_grey"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>