<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

         <RelativeLayout
             android:id="@+id/profileLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/grid_3x"
             android:layout_marginBottom="@dimen/grid_3x"
             android:gravity="center_horizontal"
             >



             <ImageView
                 android:layout_width="@dimen/standard_width"
                 android:layout_height="@dimen/standard_width"
                 android:id="@+id/photoIV"
                 android:src="@drawable/default_user"
                 android:onClick="uploadProfilePhoto"
                 android:layout_marginBottom="@dimen/grid_2x"
                 />

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="@dimen/standard_width"
                 android:layout_height="wrap_content"
                 android:id="@+id/usernameTIL"
                 android:paddingBottom="@dimen/grid_2x"
                 android:layout_below="@id/photoIV">

                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:id="@+id/usernameET"
                     android:hint="@string/hint_username" />

             </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="@dimen/standard_width"
                 android:layout_height="wrap_content"
                 android:id="@+id/emailTIL"
                 android:paddingBottom="@dimen/grid_2x"
                 android:layout_below="@id/usernameTIL">

                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:id="@+id/emailET"
                     android:hint="@string/hint_email" />

             </com.google.android.material.textfield.TextInputLayout>


             <Button
                 android:id="@+id/applyButton"
                 android:layout_width="@dimen/standard_width"
                 android:layout_height="@dimen/standard_height"
                 android:layout_below="@id/emailTIL"
                 android:layout_marginBottom="@dimen/grid_2x"
                 android:text="@string/button_apply"
                 style="@style/StandardButton"
                 android:onClick="onApply"/>
             <Button
                 android:id="@+id/signoutButton"
                 android:layout_width="@dimen/standard_width"
                 android:layout_height="@dimen/standard_height"
                 android:layout_below="@id/applyButton"
                 android:layout_marginBottom="@dimen/grid_2x"
                 android:text="@string/button_signout"
                 style="@style/StandardButton"
                 android:onClick="onSignOut"/>





         </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profileProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="5dp"
        android:background="@color/trnasparent_grey"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>